# cope

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
src/: file_utils.rs  main.rs  string_utils.rs
