[package]
name = "cope"
version = "0.2.0"
edition = "2024"
authors = [
  "Joe Hildebrand <joe-github@cursive.net>"
]

[dependencies]
dialoguer = { version = "0.12.0", default-features = false }
nix = { version = "0.30.1", features = ["process"] }
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
# panic = "abort"
strip = true
