[package]
name = "cope"
version = "0.3.1"
edition = "2024"
authors = [
  "Joe Hildebrand <joe-github@cursive.net>"
]

[dependencies]
dialoguer = { version = "0.12.0", default-features = false }
nix = { version = "0.30.1", features = ["process"] }
phf = { version = "0.13.1", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_jsonc = "1.0.108"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
# panic = "abort"
strip = true
